# LLP-PROJECT2.5.0

./: Bitmap.c  CMakeLists.txt  FileProcessing.c  README.md  main.c
Headers/: Bitmap.h  FileProcessing.h  Mandelbrot.c  Mandelbrot.h
